# AsyAgent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
asyagent/: __init__.py  __main__.py  compiler.py  config.py  errors.py  fetcher.py  server.py  sigv4.py  skill.py  storage.py
asyagent/_skill/: README.md  SKILL.md
asyagent/_skill/docs/: 01-basics.md  05-skillutils-reference.md
examples/: client.py  function_plot.asy  multi_page.asy  unit_circle.asy
scripts/: vendor_skill.py
tests/: test_chunked_body.py  test_compiler.py  test_server.py  test_sigv4.py  test_skill.py
